tests/baselines/reference/genericOfACloduleType1.errors.txt
genericOfACloduleType1.ts(10,12): error TS2345: Argument of type 'null' is not assignable to parameter of type 'C'.


==== genericOfACloduleType1.ts (1 errors) ====
    class G<T>{ bar(x: T) { return x; } }
    namespace M {
        export class C { foo() { } }
        export namespace C {
            export class X {
            }
        }
     
        var g1 = new G<C>();
        g1.bar(null).foo();
               ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'C'.
    }
    var g2 = new G<M.C>() // was: error Type reference cannot refer to container 'M.C'.